pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: dev-camp
  labels:
    app: web
spec:
  containers:
    - name: web-ctr
      image: fredrickcyril/devcamper_testing:tagVersion
      ports:
        - containerPort: 5000
