svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: devcamp-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: web
