svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: devcamp-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 31111
      protocol: TCP
  selector:
      app: web
