nginx_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-deploy
spec:
  rules:
    - host: qa.316enterprises.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-deploy
                port:
                  number: 80
